# backend-pubmed

./: .gitignore  README.md  cli.py  pyproject.toml  results.csv
pubmed/: __init__.py  api.py  filter.py  writer.py
tests/: test_cli.py  test_smoke.py
